dev/tests/cases/neg/45_send_type_mismatch.tv
df main() -> void {
    set ch: bridge<str> = bridge_new(2);
    send(ch, 42);
    echo!(recv(ch));
}
